# journy2

./: .gitignore  CMakeDependencies.txt  CMakeLists.txt  README.md  vcpkg.json
include/: Application.h  applicationstrings.h  config.h  config_strings.h
include/journal/: databasemanager.h  entry.h
include/markdown/: markdowntovector.h
include/markdown/backend/: html_backend.h
include/markdown/parser/: MarkdownBaseListener.h
include/ui/: fonthelpers.h  icons.h  imguiextensions.h  journymainframe.h  markdowneditor.h  themes.h
include/ui/datepicker/: datepicker.h
resources/: generate_parser.ps1  win_manifest.rc
resources/sql/: schema_create.sql
source/: Application.cpp  config_strings.cpp  main.cpp
source/journal/: databasemanager.cpp  entry.cpp
source/markdown/: Marky.cpp  markdowntovector.cpp
source/markdown/backend/: html_backend.cpp
source/ui/: fonthelpers.cpp  imguiextensions.cpp  journymainframe.cpp  markdowneditor.cpp  themes.cpp
source/ui/datepicker/: datepicker.cpp
